feat: добавлена аутентификация
